# LabFont2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_mtl.sh  build_vk.sh  build_wasm.sh  configure.py  orientation.md  plan.md  plan_test_patterns.md  status.md
.github/workflows/: ci.yml
config/: __init__.py  cmake_updater.py  configuration_manager.py  dependency_detector.py  readme_updater.py  script_generator.py
examples/: CMakeLists.txt
examples/basic/: coordinate_system_test.cpp  coordinate_system_test.mm  drawing_main.cpp  drawing_main.mm  texture_main.cpp  texture_main.mm
examples/rich_text/: labfont_text_rendering.cpp  labfont_text_rendering.mm
include/labfont/: labfont.h  labfont_draw.h  labfont_renderer.h  labfont_rich.h  labfont_style_parser.h  labfont_types.h
src/backends/cpu/: cpu_backend.cpp  cpu_backend.h  rasterizer.h
src/backends/metal/: metal_backend.h  metal_backend.mm  metal_command_buffer.h  metal_command_buffer.mm  metal_types.h
src/backends/metal/shaders/: compile_shaders.sh  primitives.metal
src/backends/metal/shaders/compiled/: primitives.metallib
src/backends/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_shader_compiler.cpp  vulkan_shader_compiler.h  vulkan_types.h
src/backends/vulkan/shaders/: compile_shaders.sh  lines.frag  primitives.frag  primitives.spv  primitives.vert
src/backends/wgpu/: wgpu_backend.cpp  wgpu_backend.h  wgpu_command_buffer.cpp  wgpu_command_buffer.h  wgpu_device.cpp  wgpu_device.h  wgpu_render_target.cpp  wgpu_render_target.h  wgpu_texture.cpp  wgpu_texture.h  wgpu_types.h  wgpu_vertex.h
src/backends/wgpu/shaders/: primitives.wgsl
src/core/: backend.h  backend_types.h  context.cpp  context_impl.h  context_internal.h  coordinate_system.cpp  coordinate_system.h  draw_state.h  error.cpp  error.h  error_macros.h  font_manager.h  internal_types.h  labfont_coordinate_system.cpp  labfont_draw.cpp  labfont_renderer.c  memory.cpp  memory.h  resource.h  resource_manager.cpp  resource_manager.h  sokol_8bit_fonts.cpp  vertex.h
tests/: CMakeLists.txt
tests/unit/: test_backend.cpp  test_context.c  test_cpu_backend.cpp  test_cpu_context.c  test_cpu_error.c  test_cpu_memory.c  test_cpu_resources.c  test_error.c  test_labfont_style_parser.cpp  test_main.c  test_main.cpp  test_memory.c  test_metal_backend.cpp  test_resources.c  test_texture_loading.cpp  test_vulkan_backend.cpp  test_wgpu_backend.cpp  test_wgpu_browser.cpp
tests/utils/: test_patterns.h
tests/web/: build_and_run.sh  shell.html  test.html  test_runner.js  test_wgpu_main.cpp
